--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <li>git init - сделать текущую папку репозиторием (если не скачивать)</li>
             <li>git rm --cached ... - перестать следить за файлом</li>
             <li>git add . - добавить все файлы в папке под контроль</li>
+            <li>git commit -am "..." - добавить камит</li>
+            <li>git push - отправить изменения в репозиторий</li>
+            <li>git pull - скачать изменения</li>
         </ul>
     </div>
 </body>
